<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bank.bank.AdminTerminalMainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:text="@string/welcome"
        android:textAllCaps = "false"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toLeftOf="@+id/exit"
        android:layout_marginEnd="8dp"
        tools:layout_editor_absoluteY="11dp"
        tools:layout_editor_absoluteX="20dp"/>


    <Button
        android:id="@+id/exit"
        android:layout_width="48dp"
        android:layout_height="42dp"
        android:text="@string/exit"
        android:textAllCaps = "false"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/messageButton"
        android:layout_width="352dp"
        android:layout_height="52dp"
        android:text="@string/Message"
        android:textAllCaps="false"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/change_admin"
        app:layout_constraintBottom_toBottomOf="@+id/Deserialize"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/change_admin"
        android:layout_width="352dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:text="@string/change_to_admin"
        app:layout_constraintTop_toBottomOf="@+id/get_balance"
        android:textAllCaps = "false"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/get_balance"
        android:layout_width="352dp"
        android:layout_height="52dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/get_balance"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listButton"
        android:textAllCaps = "false"
        app:layout_constraintHorizontal_bias="0.516"/>

    <Button
        android:id="@+id/listButton"
        android:layout_width="352dp"
        android:layout_height="52dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/list"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createButton"
        app:layout_constraintHorizontal_bias="0.516"/>

    <Button
        android:id="@+id/createButton"
        android:layout_width="352dp"
        android:layout_height="52dp"
        android:layout_marginLeft="16dp"
        android:text="@string/create"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAllCaps = "false"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/Serialize"
        android:layout_width="352dp"
        android:layout_height="52dp"
        android:text="@string/serialize"
        android:textAllCaps="false"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/Deserialize"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.88"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/Deserialize"
        android:layout_width="352dp"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:text="@string/deserialize"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/createButton"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.977"/>

</android.support.constraint.ConstraintLayout>
