<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bank.bank.AdminListUsers">

    <Button
        android:id="@+id/ListCustomers"
        android:layout_width="212dp"
        android:layout_height="57dp"
        android:text="@string/list_customers"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ListTellers"
        app:layout_constraintVertical_bias="0.163"/>

    <Button
        android:id="@+id/ListTellers"
        android:layout_width="212dp"
        android:layout_height="57dp"
        android:text="@string/list_tellers"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAllCaps = "false"
        app:layout_constraintTop_toBottomOf="@+id/ListAdmins"
        android:layout_marginTop="31dp" />

    <Button
        android:id="@+id/ListAdmins"
        android:layout_width="212dp"
        android:layout_height="57dp"
        android:text="@string/list_admins"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAllCaps = "false"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="89dp" />
</android.support.constraint.ConstraintLayout>
